--- a/solr/templates/service-headless.yaml
+++ b/solr/templates/service-headless.yaml
@@ -4,6 +4,7 @@ apiVersion: "v1"
 kind: "Service"
 metadata:
   name: "{{ include "solr.headless-service-name" . }}"
+  namespace: {{ .Values.namespace }}
   labels:
 {{ include "solr.common.labels" . | indent 4 }}
 spec:
