--- a/solr/templates/solr-xml-configmap.yaml
+++ b/solr/templates/solr-xml-configmap.yaml
@@ -4,6 +4,7 @@ apiVersion: "v1"
 kind: "ConfigMap"
 metadata:
   name: "{{ template "solr.configmap-name" . }}"
+  namespace: {{ .Values.namespace }}
   labels:
 {{ include "solr.common.labels" . | indent 4}}
 data:
