--- a/solr/templates/statefulset.yaml
+++ b/solr/templates/statefulset.yaml
@@ -4,6 +4,7 @@ apiVersion: apps/v1
 kind: StatefulSet
 metadata:
   name: {{ include "solr.fullname" . }}
+  namespace: {{ .Values.namespace }}
   labels:
 {{ include "solr.common.labels" . | indent 4 }}
     component: server
